# GoL-CPP-2D

./: .gitignore  CMakeCache.txt  CMakeLists.txt  IndexBuffer.cpp  Main.cpp  Makefile  README.md  Renderer.h  VertexArray.h  VertexBufferLayout.h  cmake_install.cmake  gol  imgui.ini  main.cpp  requirements.txt  run  test.cpp
include/: IndexBuffer.h  Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
res/shaders/: Basic.shader
src/: Main.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
